force-app/main/default/objects/Due_Diligence_Approval__c/Due_Diligence_Approval__c.object-meta.xml
<CustomObject>
    <label>Due Diligence Approval</label>
    <nameField>
        <displayFormat>DDA-{000000}</displayFormat>
        <label>Approval ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligence Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>