force-app/main/default/objects/Due_Diligence_Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Diligence Approval</relationshipLabel>
    <relationshipName>Due_Diligence_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>