force-app/main/default/objects/Due_Diligence_Approval__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>TEXT(Registration__r.Account__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>