force-app/main/default/objects/Due_Diligence_Approval__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>