force-app/main/default/objects/Due_Diligence_Approval__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Due Diligence Approval</relationshipLabel>
    <relationshipName>Due_Diligence_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>