force-app/main/default/objects/Due_Diligence_Approval__c/fields/Registration_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Registration_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Snapshot</label>
    <referenceTo>Registration_Snapshot__c</referenceTo>
    <relationshipLabel>Due Diligence Approval</relationshipLabel>
    <relationshipName>Due_Diligence_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>