force-app/main/default/objects/Due_Diligence_Approval__c/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <formula>Registration__r.Risk_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Rating</label>
    <type>Text</type>
</CustomField>