force-app/main/default/objects/Due_Diligence_Approval__c/fields/Trading_As__c.field-meta.xml
<CustomField>
    <fullName>Trading_As__c</fullName>
    <formula>Account__r.Trading_As__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading As</label>
    <type>Text</type>
</CustomField>