force-app/main/default/objects/Due_Diligence_Approval__c/recordTypes/DD_Approval_Completed.recordType-meta.xml
<RecordType>
    <fullName>DD_Approval_Completed</fullName>
    <active>true</active>
    <label>DD Approval Completed</label>
</RecordType>