force-app/main/default/objects/Due_Diligence_Approval__c/recordTypes/DD_Awaiting_Approval.recordType-meta.xml
<RecordType>
    <fullName>DD_Awaiting_Approval</fullName>
    <active>true</active>
    <label>DD Awaiting Approval</label>
</RecordType>