force-app/main/default/objects/Due_Diligence_Approval__c/recordTypes/New_DD_Approval.recordType-meta.xml
<RecordType>
    <fullName>New_DD_Approval</fullName>
    <active>true</active>
    <label>New DD Approval</label>
</RecordType>