force-app/main/default/objects/Due_Diligence_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Trading_As__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>