force-app/main/default/objects/Due_Diligence_Approval__c/listViews/All_Approval_In_Progress.listView-meta.xml
<ListView>
    <fullName>All_Approval_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Trading_As__c</columns>
    <columns>Risk_Rating__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approval In Progress</value>
    </filters>
    <label>All Approvals In Progress</label>
</ListView>