force-app/main/default/objects/Due_Diligence_Approval__c/listViews/AML_Queue_Due_Diligence_Approval.listView-meta.xml
<ListView>
    <fullName>AML_Queue_Due_Diligence_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>AML Queue</label>
    <queue>AML_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>